--- a/static/stargazer/css/mainflex.css
+++ b/static/stargazer/css/mainflex.css
@@ -66,7 +66,27 @@ section > h2 {
     padding-left: 8px;
     text-align: center;
     color: #ffffff;
-    width: 100px;  }
+    background-color: #22313f;
+    width: 100px;
+display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-align-content: center;
+    -ms-flex-line-pack: center;
+    align-content: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
 #slider {
     text-align:center;
     height: 74px;
@@ -135,7 +155,7 @@ section > h2 {
     content: "Brightness";
     position: relative;
     z-index: 100;
-    color: #ABB1BE;
+    color: #22313f;
     top: 28px;
 }
 .ui-widget {
@@ -213,6 +233,9 @@ input[type=text]:focus {
     margin: 0;
     cursor: pointer;
     min-height: 0;
+    border-bottom: solid 1px;
+    background-color: transparent;
+
 }
 .ui-menu {
     list-style: none;
@@ -225,6 +248,8 @@ input[type=text]:focus {
     top: 0;
     left: 0;
     cursor: default;
+    padding: 0;
+    border: solid 3px white;
 }
 .ui-menu-item {
     padding: 10px 25px 10px 25px;
@@ -309,11 +334,12 @@ thead tr {
 thead tr td {
     padding-left: 5px;
 }
-input {
+input[type=text] {
     height: 74px;
     border: 0;
     padding: 0;
 }
+
 #search-btn {
     margin-bottom: -3px;
     display: flex;
@@ -353,11 +379,14 @@ input {
     width: 100%;
 }
 .ui-autocomplete {
-    color: #ffffff;
-    margin: 0;
-    padding: 0;
     position: absolute;
-    background-color: #abb1be;
+    min-width: 141px;
+    color: #FFF;
+    background: #22313F;
+    line-height: 30px;
+    border-radius: 0;
+    text-transform: none;
+    text-shadow: none;
 }
 .ui-autocomplete >* {
     border-bottom: solid 1px ;
@@ -586,8 +615,8 @@ and (min-width : 1824px) {
     }
 
     .ok {
-        background: url("/static/stargazer/css/img/check.svg") no-repeat right center;
-        background-size: 45%;
+        background: url("/static/stargazer/css/img/small-ok.svg") no-repeat right center;
+        background-size: 35%;
     }
 
     input {
@@ -688,13 +717,14 @@ and (min-width : 1824px) {
     }
 
     .show-filters-icon {
-        height: 56px;
-        flex: 0 0 56px;
-        display: flex;
-        align-items: center;
-        background-color: #d7d7d7;
-        transition: 0.4s;
-        margin: 12px;
+    height: 56px;
+    flex: 0 0 200px;
+    display: flex;
+    align-items: center;
+    transition: .4s;
+    margin: 12px;
+    background-position-x: 95%;
+    padding-left: 12px;
     }
 
     .show-filters-icon:hover {
@@ -744,6 +774,8 @@ and (min-width : 1824px) {
         align-items: center;
         flex: 1 1 100%;
         padding: 36px;
+        margin-bottom: 18px;
+        background-color: rgba(6, 0, 255, 0.09);
     }
     .clicked {
         color: #22313f;
@@ -823,27 +855,38 @@ and (min-width : 1824px) {
 
     #const-group {
         display: inherit;
-        flex: 1 1 500px;
+        flex: 1 1 650px;
+        border: 3px solid #fff;
     }
 
     #types {
         flex: 1 1 250px;
     }
 
-    #catalogues {
-        flex: 1 1 250px;
-    }
-    .search-interface > p {
-        flex: 0 0 100%;
-        height: 100%;
-    }
-    .search-i-p {
-        font-weight: 900;
-        text-transform: uppercase;
-        color: #22313f;
-        margin-right: 24px
-    }
-    /*#settings-module:n {*/
+#catalogues {
+    flex: 1 1 250px;
+}
+.search-interface > p {
+    flex: 0 0 100%;
+    height: 100%;
+    margin-top: 0;
+}
+.search-i-p {
+    font-weight: 900;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    margin-right: 24px
+}
+#min_mag, #max_mag {
+    width: auto;
+    font-weight: 900;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    font-size: x-large;
+}
+
+
+/*#settings-module:n {*/
         /*flex: 1 1 200px;*/
     /*}*/
 /*Eksperymentt*/
@@ -858,3 +901,4 @@ and (min-width : 1824px) {
     /*-webkit-box-shadow: 0px 0px 4px #222;*/
     /*box-shadow: 0px 0px 4px #222;*/
 /*}*/
+
