--- a/static/stargazer/css/popups.css
+++ b/static/stargazer/css/popups.css
@@ -160,3 +160,37 @@
     background-color: rgba(215, 215, 215, 0.6);
     top: calc((50%- 200px)/2);
 }
+
+#advanced span, #reset span, #withmag span, #VisibleOnly span {
+    position: absolute;
+    width: 250px;
+    color: #FFF;
+    background: #22313F;
+    line-height: 30px;
+    visibility: hidden;
+    border-radius: 0;
+    opacity: 0;
+    text-transform: none;
+    text-shadow: none;
+
+}
+#advanced span:after, #reset span:after, #withmag span:after, #VisibleOnly span:after
+{
+  content: '';
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -8px;
+  width: 0; height: 0;
+  border-bottom: 8px solid #22313F;
+  border-right: 8px solid transparent;
+  border-left: 8px solid transparent;
+}
+#advanced:hover span, #reset:hover span, #withmag:hover span, #VisibleOnly:hover span {
+    visibility: visible;
+    opacity: 1;
+    top: 82px;
+    left: 0;
+    z-index: 999;
+    transition: opacity 0.7s ;
+}
